# PhotoBackupOrganizer

./: .gitignore  Dockerfile  README.md  build.ps1  create_test_images.py  docker-bake.hcl  docker-compose.yml  implementation-plan.md  pyproject.toml  requirements.md
.github/: copilot-instructions.md
.github/prompts/: fix-bug.prompt.md  new-feature.prompt.md  update-docs.prompt.md
.github/workflows/: docker-publish.yml
app/: config.py  database.py  destinations.py  duplicates.py  geocoder.py  main.py  metadata.py  mover.py  scanner.py  thumbnails.py
app/routers/: destinations.py  move.py  scan.py  ui.py
app/templates/: _scan_status.html  base.html  confirm.html  index.html  log.html  review.html
config/: config.example.yaml
docs/: architecture.md  implementation-plan.md  requirements.md
tests/: conftest.py  test_config.py  test_destinations.py  test_duplicates.py  test_metadata.py  test_mover.py  test_scanner.py  test_thumbnails.py
